samples/_failures_safe/1761432926_ae6ff8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1547ed7.c: In function ‘main’:
./samples/SAFE/__tmp_d1547ed7.c:129:5: error: expected declaration or statement at end of input
  129 |     int choice;
      |     ^~~
